--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,26 @@
-<link href="/static/styles.css" rel="stylesheet">
-<h2> Gemini API Steam Demo </h2>
-<div id="output"></div>
-<p>
-<form action="/query">
-  <div class="container">
-    <label for="q"><b>Query</b></label>
-    <input type="text" placeholder="Enter Question" name="q" required>
-    <button type="submit">Submit</button>
-  </div>
-  </form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Upload File</title>
+    <link href="/static/styles.css" rel="stylesheet">
+</head>
+<body>
+    <h1>Upload an image</h1>
+    <form method="post" enctype="multipart/form-data">
+        <input type="file" name="document_attachment_doc" id="document_attachment_doc">
+        <input type="submit" value="Upload">
+    </form>
+    </body>
+</html>
 <script>
-function getResponse() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      if (this.responseText == "END")
-      {
-        clearInterval(interval);
-      }
-      else
-      {
-      document.getElementById("output").innerHTML +=
-      this.responseText;
-      }
-    }
-  };
-  xhttp.open("GET", "/stream", true);
-  xhttp.send();
-}
-const interval = setInterval(getResponse, 1000);
+const form = document.getElementById("new_document_attachment");
+const fileInput = document.getElementById("document_attachment_doc");
+
+fileInput.addEventListener('change', () => {
+  form.submit();
+});
+
+window.addEventListener('paste', e => {
+  fileInput.files = e.clipboardData.files;
+});
 </script>
