--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Upload File</title>
+    <title>Upload an image</title>
     <link href="/static/styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Upload an image</h1>
+    <h2>Upload an image</h2>
     <form method="post" enctype="multipart/form-data">
+      <div class="container">
         <input type="file" name="document_attachment_doc" id="document_attachment_doc">
         <input type="submit" value="Upload">
+      </div>
     </form>
     </body>
 </html>
